// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar is extendable by ProgressBar face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-1 {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  max-width: 100%;
  will-change: width;
  -webkit-transition: width .5s cubic-bezier(.64,0,.35,1);
  transition: width .5s cubic-bezier(.64,0,.35,1);
}

.emotion-1::before {
  background-color: currentColor;
  content: "\\200b";
  display: inline-block;
  line-height: 100%;
  width: 100%;
}

.emotion-2 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  position: relative;
  width: 100%;
  color: rgb(255,192,203);
}

.emotion-2:before {
  background-color: currentColor;
  content: "\\200b";
  display: inline-block;
  opacity: 0.2;
  width: 100%;
}

<div
    class="emotion-2"
  >
    <progress
      class="emotion-0"
      max="100"
      value="0"
    />
    <div
      class="emotion-1"
      style="width: 0%;"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar is extendable by ProgressBarProgress face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-2 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.emotion-2:before {
  background-color: currentColor;
  content: "\\200b";
  display: inline-block;
  opacity: 0.2;
  width: 100%;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-1 {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  max-width: 100%;
  will-change: width;
  -webkit-transition: width .5s cubic-bezier(.64,0,.35,1);
  transition: width .5s cubic-bezier(.64,0,.35,1);
  color: rgb(255,192,203);
  font-size: 10px;
  line-height: 24px;
}

.emotion-1::before {
  background-color: currentColor;
  content: "\\200b";
  display: inline-block;
  line-height: 100%;
  width: 100%;
}

<div
    class="emotion-2"
  >
    <progress
      class="emotion-0"
      max="100"
      value="0"
    />
    <div
      class="emotion-1"
      style="width: 0%;"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-2 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.emotion-2:before {
  background-color: currentColor;
  content: "\\200b";
  display: inline-block;
  opacity: 0.2;
  width: 100%;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-1 {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  max-width: 100%;
  will-change: width;
  -webkit-transition: width .5s cubic-bezier(.64,0,.35,1);
  transition: width .5s cubic-bezier(.64,0,.35,1);
}

.emotion-1::before {
  background-color: currentColor;
  content: "\\200b";
  display: inline-block;
  line-height: 100%;
  width: 100%;
}

<div
    class="emotion-2"
  >
    <progress
      class="emotion-0"
      max="100"
      value="0"
    />
    <div
      class="emotion-1"
      style="width: 0%;"
    />
  </div>
</DocumentFragment>
`;
